@@ -152,12 +152,13 @@ typedef struct proc_t {
         session,        // stat            session id
         nlwp,           // stat,status     number of threads, or 0 if no clue
         tgid,           // (special)       thread group ID, the POSIX PID (see also: tid)
-        tty,            // stat            full device number of controlling terminal
+        tty;            // stat            full device number of controlling terminal
         /* FIXME: int uids & gids should be uid_t or gid_t from pwd.h */
-        euid, egid,     // stat(),status   effective
-        ruid, rgid,     // status          real
-        suid, sgid,     // status          saved
-        fuid, fgid,     // status          fs (used for file access only)
+        uid_t euid; gid_t egid; // stat(),status effective
+        uid_t ruid; gid_t rgid; // status        real
+        uid_t suid; gid_t sgid; // status        saved
+        uid_t fuid; gid_t fgid; // status        fs (used for file access only)
+    int
         tpgid,          // stat            terminal process group id
         exit_signal,    // stat            might not be SIGCHLD
         processor;      // stat            current (or most recent?) CPU
